--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ android {
             buildConfigField("String", "USER", "\"PROD\"")
             buildConfigField "boolean", "ACTIVATE_KIOSK", "false"
             buildConfigField "boolean", "DEV_BUILD", "false"
+            buildConfigField "boolean", "DEV_BUILD", "false"
+            buildConfigField "boolean", "IN21_012_PRB_Status", "true"
             signingConfig signingConfigs.release
         }
         debug {
@@ -59,6 +61,7 @@ android {
             buildConfigField("String", "USER", "\"DEV\"")
             buildConfigField "boolean", "ACTIVATE_KIOSK", "false"
             buildConfigField "boolean", "DEV_BUILD", "true"
+            buildConfigField "boolean", "IN21_012_PRB_Status", "true"
             signingConfig signingConfigs.debug
             manifestPlaceholders = [:]
             resValue("string", "PORT_NUMBER", "8081")
@@ -86,7 +89,7 @@ private String generateVersionName() {
         versionName += "-" + rootProject.ext.versionClassifier
     }*/
     String versionClassifier = "Oct30"
-    String versionName = "2.2.6-R1"
+    String versionName = "2.2.7-I"
 
     if (versionClassifier != null) {
         //versionName += "-" + versionClassifier
