--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         android:icon="@mipmap/ic_launcher_new"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:manageSpaceActivity=".ui.ActionRestrictedActivity"
+
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round_new"
         android:supportsRtl="true"
@@ -83,6 +83,9 @@
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name=".ui.BarCodeCaptureActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.QrScannerActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.QrResultActivity"
@@ -254,6 +257,17 @@
                 <action android:name="android.hardware.usb.action.USB_DEVICE_DETACHED" />
                 <action android:name="android.hardware.usb.action.USB_STATE" />
             </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".AdbCommandReceiver"
+            android:enabled="true">
+
+            <intent-filter android:priority="999">
+                <action android:name="com.agyohora.mobileperitc.movefiles" />
+                <action android:name="com.agyohora.mobileperitc.getvectorfromhmd" />
+            </intent-filter>
+
         </receiver>
 
         <provider
